--- a/src/main/resources/templates/miProducto.html
+++ b/src/main/resources/templates/miProducto.html
@@ -15,7 +15,41 @@
     	alert("Acaba de cerrar sesión. Se le redirigirá a la pantalla inicial de la aplicación.");
     	window.location = "login";
     }
-
+	
+    function validacion(){
+    	var titulo = document.getElementById("titulo").value;
+    	var categoria = document.getElementById("categoria").value;
+    	var descripcion = document.getElementById("descripcion").value;
+    	var precio = document.getElementById("precio").value;
+    	var estado = document.getElementById("estado").value;
+    	
+    	if( titulo == "" ){
+			alert("Introduzca un título.");
+			return false;
+		}
+		if(categoria == ""){
+			alert("Introduzca una categoria.");
+			return false;
+		}
+		if( descripcion == ""){
+			alert("Introduzca una descripción.");
+			return false;
+		}
+		if(precio == ""){
+			alert("Introduzca un precio.");
+			return false;
+		}
+		if (!/^([0-9])*$/.test(precio)){
+			alert("El campo precio solo puede contener un numero");
+			return false;
+		}
+		if(estado == ""){
+			alert("Introduzca un estado.");
+			return false;
+		}
+		return true;
+    	
+    }
 	
 	</script>
 	
@@ -47,9 +81,9 @@
 			<input type="hidden" name="clienteID" th:value="${producto.clienteID}" />  
 			
 			<p class='etiquetas'><b>Titulo&nbsp;&nbsp;&nbsp;</b>
-				<input type="text" name="titulo"  class="tituloProducto"  th:value="${producto.titulo}"  /><br /><br /></p><!-- th:field="*{titulo}"  -->
+				<input type="text" id="titulo" name="titulo"  class="tituloProducto"  th:value="${producto.titulo}"  /><br /><br /></p><!-- th:field="*{titulo}"  -->
 			<p class='etiquetas'><b>Categori­a&nbsp;&nbsp;&nbsp;</b>
-				<select  class="categoria" name="categoria" >
+				<select  id="categoria" class="categoria" name="categoria" >
 					<option th:selected="${producto.categoria}" th:text="${producto.categoria}"></option>
 					<option value="Cualquier categoria" > Cualquier categoria </option>
 					<option value="Mobiliario">Mobiliario</option>
@@ -61,15 +95,15 @@
 				</select><!-- th:field="*{categoria}" -->
 			<br /><br /></p>
 			<p class='etiquetas'><b>Descripcion&nbsp;&nbsp;&nbsp;</b>
-				<input type="text" name="descripcion" class="descripcion" id="descripcion4"  th:value="${producto.descripcion}" /><br /><br /></p><!-- th:field="*{descripcion}"  -->
+				<input type="text" name="descripcion" class="descripcion" id="descripcion"  th:value="${producto.descripcion}" /><br /><br /></p><!-- th:field="*{descripcion}"  -->
 			<p class='etiquetas'><b>Imagen&nbsp;&nbsp;&nbsp;</b>
 				<input id="imagen4" name="imagen" th:value="${producto.image}"  type="file" accept="image/*" /><br /><br /></p>
 			<p class='etiquetas'><b>Precio&nbsp;&nbsp;&nbsp;</b>
-				<input type="text" name="precio" class="precio" id="precio4"  th:value="${producto.precio}" /><br /><br /></p><!--  th:field="*{precio}" -->
+				<input type="text" name="precio" class="precio" id="precio"  th:value="${producto.precio}" /><br /><br /></p><!--  th:field="*{precio}" -->
 			<p class='etiquetas'><b>Estado&nbsp;&nbsp;&nbsp;</b>
-				<input type="text" name="estado"  class="estado" id="estado4" readonly="readonly"  th:value="${producto.estado}"  /><br/><br /></p>
+				<input type="text" name="estado"  class="estado" id="estado" readonly="readonly"  th:value="${producto.estado}"  /><br/><br /></p>
 			<label>
-				<button type="submit" class='validar btn btn-warning' id='validar'>Guardar</button></label><br />
+				<button type="submit" onclick="return validacion();" class='validar btn btn-warning' id='validar'>Guardar</button></label><br />
 		</form>
 	<p>
 		<a class ="btn btn-info" href="javascript:history.go(-1)">Volver</a>
