--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -21,7 +21,7 @@
 	
 	var expresion = /^[a-z][\w.-]+@\w[\w.-]+\.[\w.-]*[a-z][a-z]$/i;
 	
-	if (email.length == 0){
+	if (email == "" ){
 		alert("Por favor introduce tu dirección de correo electrónico");
 		return false;
 	}
@@ -30,11 +30,11 @@
 		return false;
 	}
 	
-	if (contras1.length == 0){
+	if (contras1 == "" ){
 		alert("Por favor introduce tu contraseña");
 		return false;
 	}
-	if (contras2.length == 0){
+	if (contras2 == "" ){
 		alert("Por favor confirma tu contraseña");
 		return false;
 	}
@@ -42,15 +42,15 @@
 		alert("Las contraseñas no son iguales. Por favor, introduzca la misma contraseña en ambos campos");
 		return false;
 	}
-	if (nombre.length == 0){
+	if (nombre == "" ){
 		alert("Por favor introduce tu nombre");
 		return false;
 	}
-	if (apellido.length == 0){
+	if (apellido == "" ){
 		alert("Por favor introduce tus apellidos");
 		return false;
 	}
-	if (ciudad.length == 0) {
+	if (ciudad == "" ) {
         alert("Por favor introduce tu ciudad de residencia");
 		return false;
     }
