--- a/src/main/resources/templates/gestionProductos.html
+++ b/src/main/resources/templates/gestionProductos.html
@@ -37,7 +37,7 @@
 		</nav>
 	  	  <table id="tablaGestion" class="table" >
 	  <thead>
-	  	<tr class="fila1"><td>Titulo</td><td>Categoria</td><td>Descripcion</td><td>Precio</td><td>Estado</td><td>Imagen</td><td></td><td></td></tr>
+	  	<tr class="fila1"><td>Titulo</td><td>Categoria</td><td>Descripcion</td><td>Precio</td><td>Estado</td><!-- <td>Imagen</td> --><td></td><td></td></tr>
 	  </thead>
 	  <tbody>
 		<tr th:each="producto : ${productos}"> 
@@ -46,7 +46,7 @@
 			<td th:text="${producto.descripcion}"></td>
 			<td th:text="${producto.precio}"></td>
 			<td th:text="${producto.estado}"></td>
-			<td th:text="${producto.image}"></td>
+			<!-- <td th:text="${producto.image}"></td> -->
 			<td><a  th:href="@{'admineditarproducto?id='+${producto.id}}"  th:title="@{'Editar producto '+${producto.titulo}}" >Editar</a></td>
 			<td><a th:href="@{'admineliminarproducto?id='+${producto.id}}" th:title="@{'Eliminar producto '+${producto.titulo}}"  >Eliminar</a></td>
 		</tr>
