--- a/src/main/resources/templates/miPerfil.html
+++ b/src/main/resources/templates/miPerfil.html
@@ -29,7 +29,7 @@
     	
     	var expresion = /^[a-z][\w.-]+@\w[\w.-]+\.[\w.-]*[a-z][a-z]$/i;
     	
-    	if (email.length == 0){
+    	if (email == ""){
     		alert("Por favor introduce tu dirección de correo electrónico");
     		return false;
     	}
@@ -38,20 +38,20 @@
     		return false;
     	}
     	
-    	if (contras1.length == 0){
+    	if (contras1 == "" ){
     		alert("Por favor introduce tu contraseña");
     		return false;
     	}
     	
-    	if (nombre.length == 0){
+    	if (nombre == "" ){
     		alert("Por favor introduce tu nombre");
     		return false;
     	}
-    	if (apellido.length == 0){
+    	if (apellido == "" ){
     		alert("Por favor introduce tus apellidos");
     		return false;
     	}
-    	if (ciudad.length == 0) {
+    	if (ciudad == "" ) {
             alert("Por favor introduce tu ciudad de residencia");
     		return false;
         }
